The One Ring 2e/sheet.css
@import url('https://fonts.cdnfonts.com/css/aniron');
@font-face {
    font-family: 'AnorinFace';
    src: url('https://fonts.cdnfonts.com/css/aniron');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'NanumSquareRound';
    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {font-family: "AnironOwf"; 
    src: url("//db.onlinewebfonts.com/t/767cb11dc1ee01154718463adc3a1d1e.eot"); 
    src: url("//db.onlinewebfonts.com/t/767cb11dc1ee01154718463adc3a1d1e.eot?#iefix") format("embedded-opentype"), 
    url("//db.onlinewebfonts.com/t/767cb11dc1ee01154718463adc3a1d1e.woff2") format("woff2"), 
    url("//db.onlinewebfonts.com/t/767cb11dc1ee01154718463adc3a1d1e.woff") format("woff"), 
    url("//db.onlinewebfonts.com/t/767cb11dc1ee01154718463adc3a1d1e.ttf") format("truetype"), 
    url("//db.onlinewebfonts.com/t/767cb11dc1ee01154718463adc3a1d1e.svg#Aniron") format("svg"); 
}
/* reset all
.ui-dialog .charsheet select,
.ui-dialog .charsheet textarea,
.ui-dialog .charsheet input,
.ui-dialog .charsheet .uneditable-input,
.ui-dialog .charsheet label,
.ui-dialog .charsheet button{
  all: initial;
}
*/
.charsheet * {
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif, sans-serif;
    font-weight: normal;
}
/*Configure the tab buttons*/
.charsheet :is(.sheet-pc,.sheet-adversary) {
    display: none;
    position: relative;
    background: url('https://raw.githubusercontent.com/bhuesemann/roll20-character-sheets/tor2e_02-00-00/The%20One%20Ring%202e/assets/background.webp');
    background-color: #FEFCF0;
    border: 8px solid transparent;
    border-image-source: url('https://raw.githubusercontent.com/bhuesemann/roll20-character-sheets/tor2e_02-00-00/The%20One%20Ring%202e/assets/boxline-border-red.png');
    border-image-slice: 8 8 8 8;
    border-image-repeat: repeat;
    padding-right: 10px;
    z-index:0;
}
.charsheet .sheet-pc{
    min-width: 1200px;
    min-height: 600px;
}
/* show the selected tab */
.charsheet .sheet-tabstoggle[value="isPC"] ~ div.sheet-pc,
.charsheet .sheet-tabstoggle[value="isAdversary"] ~ div.sheet-adversary {
    display: block;
}
.charsheet {
    /* Define CSS variables */
    --red: rgb(176, 33, 30); 
    --gray: rgb(104, 104, 104);
    --solidborder: 1px solid var(--gray);
    --borderred: https://raw.githubusercontent.com/bhuesemann/roll20-character-sheets/tor2e_02-00-00/The%20One%20Ring%202e/assets/boxline-border-red.png;
    --borderbrown: https://raw.githubusercontent.com/bhuesemann/roll20-character-sheets/tor2e_02-00-00/The%20One%20Ring%202e/assets/boxline-border-brown.png;
    padding: 0px;
}
.charsheet :is(h1,h2,h3){
    font-family: "Aniron", "Palatino Linotype", "Book Antiqua", Palatino, serif, sans-serif;
    font-weight: normal;
    line-height: 1;
    color: var(--red);
    text-transform: uppercase;
    font-size: smaller; 
    font-weight: bold;
    line-height: 25px;
}
.charsheet :is(h2,h3) {
    color: var(--gray);
    font-weight: normal;
}
.charsheet h2 {
    font-size: x-small;
}
.charsheet h3 {
    font-size: x-small;
}
.ui-dialog .charsheet :is(button[type="roll"], button[type="action"][class="parsed-rolls"]) {
    font-size: 1.3em;
    background: transparent;
    border: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    opacity: 1;
    padding: 0px;
    margin: 0px 0px;
    outline: none;
    height: 100%;
    vertical-align: middle;
}
.ui-dialog .charsheet :is(button[type="roll"], button[type="action"][class="parsed-rolls"]):hover {
    opacity: .5;
}
.ui-dialog .charsheet :is(button[type="roll"], button[type="action"][class="parsed-rolls"]):before {
    /* change D20 to system-appropriate D12 */
    font-family: "dicefontd12" !important;
    content: "0" !important;
}
.charsheet input,
.charsheet textarea {
    border: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    background: rgba(255,255,255,.5);
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}
.charsheet textarea {
    border: 2px solid rgba(0,0,0,.15);
    text-align: left;
}
.charsheet input:hover,
.charsheet textarea:hover,
.charsheet input:focus,
.charsheet textarea:focus {
    background: rgba(255,255,255,1);
}
.charsheet input[type="text"],
.charsheet input[type="number"],
.charsheet input.sheet-number,
.charsheet select {
    background: none !important;
    border-radius: 0;
    border-bottom: 2px solid rgba(0,0,0,.15);
    text-align: left;
    margin-bottom: 5px;
}
.charsheet input[type="text"]{
    width: 150px;
}

.charsheet select{
    width: min-content;
    border-left: 0;
    border-right: 0;
    border-top: 0;
    line-height: 18px;
    height: 17px;
    padding: 0px 4px 0px 4px;
}
.charsheet input.sheet-number {
    width: 3.5em !important;
}
.charsheet input[type="number"] {
  -webkit-appearance: textfield;
     -moz-appearance: textfield;
          appearance: textfield;
}
.charsheet input[type="number"]::-webkit-inner-spin-button, 
.charsheet input[type="number"]::-webkit-outer-spin-button { 
  -webkit-appearance: none;
}
.charsheet span[class|="diamond"] input[type="number"]{
    border-bottom: 0;
}
.charsheet input[type="checkbox"]{
    padding: 0px !important;
    margin: 0px !important;
    width: 12px !important;
}
.charsheet :is(#skill-strength,#skill-heart,#skill-wits,#experience) input[type="checkbox"]:checked + label,
.charsheet :is(#skill-strength,#skill-heart,#skill-wits,#experience) input[type="checkbox"]:checked + span {
    text-decoration: underline;
}
/* Dots*/
.charsheet .sheet-dots {
    display: block;
    float: right;
    top: 2px;
    right: 0;
    margin: 1px 15px 0px 0px;
}
/* ... */

